--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'    // Security classes
 
     //Swagger UI
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0'  // /swagger-ui
+    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0")
 
     //Lombok
     compileOnly 'org.projectlombok:lombok'
